# ibl-neuropixel

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  release_notes.md  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.py
.github/workflows/: publish_to_pypi.yaml  tests.yaml
experiment/: bad_ch_annotations.json  ibldsp.py
src/: neuropixel.py  spikeglx.py
src/ibldsp/: cadzow.py  cuda_tools.py  destripe_gpu.py  filter_gpu.py  fourier.py  icsd.py  plots.py  raw_metrics.py  smooth.py  spiketrains.py  sync.py  utils.py  voltage.py  waveform_extraction.py  waveforms.py
src/neurodsp/: __init__.py  cadzow.py  destripe_gpu.py  raw_metrics.py  smooth.py  spiketrains.py  utils.py  voltage.py  waveforms.py
src/neurowaveforms/: model.py
src/tests/: test_destripe.py  test_dsp.py  test_filter_gpu.py  test_fourier.py
src/tests/fixtures/np2split/: _spikeglx_ephysData_g0_t0.imec0.ap.ch
src/tests/fixtures/waveform_sample/: test_arr_in.npy  test_arr_peak.npy  test_df.csv
src/tests/integration/: csd_experiments.py  test_destripe.py
src/tests/integration/cpu/: csd_experiments.py  test_destripe.py
src/tests/unit/: test_cadzow.py  test_ephys_np2.py  test_ibldsp.py  test_neuropixel.py  test_plots.py  test_spikeglx.py  test_sync.py  test_utils.py  test_utils_fourier.py  test_voltage.py  test_waveforms.py
src/tests/unit/cpu/: test_dsp.py  test_ibldsp.py  test_neuropixel.py  test_spikeglx.py  test_waveforms.py
src/tests/unit/gpu/: test_filter_gpu.py  test_fourier.py
(+4 files in other folders)
